fix typo for acute acent
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@10 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ Jimmy Zhou <jimmyzhou@users.sourceforge.net>
 	* Bug Fixes:
 		1. Compile error at rxvt_free_clipping (screen.c) when XFT
 		   support is not enabled.
+		2. Fix typo in acute acent. Thanks to Benedikt Magnusson
+		   for the but report.
 
 Gautam Iyer <gi1242@users.sourceforge.net>
 	* Bug Fixes:
