--- a/ChangeLog
+++ b/ChangeLog
@@ -19,10 +19,6 @@ Jimmy Zhou <jimmyzhou@users.sourceforge.net>
 		1. Enable multiple bold fonts. Thanks to Edgar Toernig for
 		   the patch.
 
-	* Enhancements:
-		1. Enable multiple bold fonts. Thanks to Edgar Toernig for
-		   the patch.
-
 Gautam Iyer <gi1242@users.sourceforge.net>
 	* Bug Fixes:
 		1. Macros now ignore the state of caps lock (as they should).
@@ -41,10 +37,13 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 		7. Also dump initial tab titles when the --cmdInitTabs options are
 		   given (this used to cause incorrect behaviour when the user closes
 		   tab 0, and opens a new tab).
+		8. Fixed bug #1473987.
 
 	* Enhancements:
 		1. Warn if closing mrxvt with multiple tabs (and the tabbar is
 		   hidden).
+		2. Code cleanup (OK. That's not really an enhancement for users)
+		3. Update documentation.
 
 0.4.2 to 0.5.0
 \-----------------------------------
