Applied Jimmy's patch to fix crash on OpenBSD-0.3.9.
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@23 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,11 @@ Jimmy Zhou <jimmyzhou@users.sourceforge.net>
 		5. Adjust several limits, e.g., max border width and min
 		   blink time according to Edgar Toernig's patch.
 		6. Fix rpmbuild (Sourceforge Bug #1482311)
+		7. Fix crash on OpenBSD 3.9 when MULTI_CHAR is enabled -
+		   the variable morecur (defined as char) in screen.c is
+		   treated as unsigned (WtF!).
+		8. Fix compile error on OpenBSD 3.9 when MULTI_CHAR is
+		   enabled (OpenBSD keeps playing game with us!).
 
 	* Enhancements:
 		1. Enable multiple bold fonts. Thanks to Edgar Toernig for
