--- a/ChangeLog
+++ b/ChangeLog
@@ -63,6 +63,8 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 		   prefixed with an '!', run the shell first and then execute the
 		   command. Removed the --tabShell option (as the prefix with '!' is
 		   more flexible).
+		5. Macros can now be chained (i.e. you can execute upto 16 actions in
+		   sequence with any macro).
 
 
 0.4.2 to 0.5.0
