fix --enable-gb option, it should be --enable-cjk
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@25 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/FAQ
+++ b/FAQ
@@ -294,7 +294,7 @@ A:  Most probably, you have not enabled gb/big5/kanji/korea options when you
     configure the mrxvt. These options are turned off by default. Reconfigure
     mrxvt to enable these options and rebuild it like the following:
 
-	$ ./configure --enable-gb --enable-whatever-other-options
+	$ ./configure --enable-cjk --enable-whatever-other-options
 	$ make
 	$ su
 	$ make install
