--- a/README
+++ b/README
@@ -151,7 +151,8 @@ CJK font family. Notice that -fm and -xftfm options use different
 formats of font names. For details about the difference, read the FAQ
 file.
 
-	. Set environment variable LC_CTYPE to zh_CN. Make sure to unset
+	. Set environment variable LC_CTYPE to zh_CN (or zh_CN.GBK,
+zh_CN.GB2312, zh_CN.EUC based on your system). Make sure to unset
 environment variable LC_ALL, otherwise LC_CTYPE is overrided. Notice
 that this setting is global for all the following commands you will
 type in the same shell session. You can supply the environment variable
@@ -185,14 +186,16 @@ as above. All you need to do is to run mrxvt as following:
 
 	. Focus on the mrxvt window, click Ctrl_Space to invoke SCIM
 
-	. For Linux, set environment variable LC_ALL (for scim) and 
-LC_CTYPE (for mrxvt) to zh_CN or zh_CN.gbk are both good for
-SCIM/fcitx input. For FreeBSD, they must be zh_CN.eucCN for fcitx
-input.
+	. For Linux and Mac OS X, setting environment variable LC_ALL
+(for scim) and LC_CTYPE (for mrxvt) to zh_CN or zh_CN.GBK are both
+good for SCIM/fcitx input. For FreeBSD, they must be zh_CN.eucCN for
+fcitx input. For OpenBSD, they can be zh_CN.EUC or zh_CN.GBK for
+fcitx input.
 
-Mrxvt is tested to work with SCIM, fcitx and gcin. It should work fine
-with other X Input methods, like xcin, Chinput and miniChinput. It is
-reported to work with French ascent as well.
+Mrxvt is tested to work with SCIM, fcitx and gcin on Linux, FreeBSD,
+OpenBSD and Mac OS X. It should work fine with other X Input methods,
+like xcin, Chinput and miniChinput. It is reported to work with French
+ascent as well.
 
 
 
@@ -204,6 +207,8 @@ features compared with rxvt):
 	* multi-tab support
 	* runtime changedable tab title and tab order
 	* simple command support (session) for each tab terminal
+	* profiles for different tabs
+	* macros to define shortcut key combinations
 	* input broadcasting to all tab terminals
 	* freetype font (Xft) support
 	* built-in true translucent window support
@@ -236,7 +241,7 @@ For a complete list of all features, please read README.configure file.
 
 Here are tested platforms that mrxvt is known to work with:
 
-	Slackware Linux 8.1/10.0/10.1, -current
+	Slackware Linux 8.1/10.0/10.1/10.2, -current
 	Slackintosh 10.1, 10.2 (PPC)
 	RedHat Linux 9.0, Enterprise 3, Fedora Core 2/3
 	Debian Linux
@@ -244,7 +249,7 @@ Here are tested platforms that mrxvt is known to work with:
 	SuSE Linux 8.2, 9.0, 9.1, 9.2
 	SUN Solaris (SPARC) 7/8/9/10
 	FreeBSD 4.8/5.2.1/5.3
-	OpenBSD 3.5/3.6
+	OpenBSD 3.5/3.6/3.8/3.9
 	NetBSD 2.0
 	IRIX 6.5
 	HP-UX
@@ -289,10 +294,6 @@ terminal (not a technical difficulty), but it will significantly
 increase the X resources usage since each terminal needs at least
 one pixmap.
 
-	. Thai support is incomplete since I do not know too much about
-it and do not have the Thai fonts. It will be removed completely in
-0.5 and future releases unless someone can help us hack it. :-)
-
 	. Off-focus fading does not work under XFT in order to save
 resources. This may be fixed in the future.
 
@@ -322,6 +323,9 @@ Here are several security issues of mrxvt:
 	root permission from mrxvt binary without losing the logging
 	feature. But doing so may cause trouble to chown the tty on some
 	systems.
+
+	Many escape sequences introduced in mrxvt 0.4.x to manipulate
+	tabs are disabled by default to avoid potential security risks. 
 
 
 
