replace obsolete -tnum option with -ip option for session support
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@32 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@ Jimmy Zhou <jimmyzhou@users.sourceforge.net>
 		   treated as unsigned (WtF!).
 		8. Fix compile error on OpenBSD 3.9 when MULTI_CHAR is
 		   enabled (OpenBSD keeps playing game with us!).
+		9. Saving session behavior now conforms to profile support.
 
 	* Enhancements:
 		1. Enable multiple bold fonts. Thanks to Edgar Toernig for
