fix crash when calling XlookupString by replacing compse parameter with NULL pointer
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@42 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,9 @@ Jimmy Zhou <jimmyzhou@users.sourceforge.net>
 		   enabled (OpenBSD keeps playing game with us!).
 		9. Saving session behavior now conforms to profile support.
 		10. Apply patches from FreeBSD ports.
+		11. Fix crash on Solaris when calling XLookupString. Xlib
+		   manual states that a portable program should pass NULL
+		   to the last (compose) parameter.
 
 	* Enhancements:
 		1. Enable multiple bold fonts. Thanks to Edgar Toernig for
