--- a/doc/mrxvt.1
+++ b/doc/mrxvt.1
@@ -1537,6 +1537,11 @@ Toggle broadcasting of input to all tabs.
 .It Ic ToggleHold
 Toggle holding of exited tabs.
 .\" ------------------------------------------------------------
+.It Ic ToggleFullscreen
+Toggle between full screen and regular mode. Also enable
+.Fl Fl smoothResize
+to get true full screen. This will only work if you are running an EWMH compatible window manager (e.g. Fvwm / OpenBox / KDE / Gnome).
+.\" ------------------------------------------------------------
 .It Ic SetTitle
 Set title of active tab to selection. (The selection must be owned by
 .Nm )
