--- a/doc/mrxvt.1
+++ b/doc/mrxvt.1
@@ -1271,12 +1271,14 @@ Hide/show menubar
 .It Ctrl+Shift+a
 Hide/show tabbar buttons
 .
-.It Ctrl+Shift+f
+.It Ctrl+Shift+b
 Toggle very bold font
+.It Ctrl+Shift+d
+Toggle input broadcasting (unbound by default)
 .It Ctrl+Shift+e
 Toggle holding exited tab
-.It Ctrl+Shift+b
-Toggle input broadcasting
+.It Ctrl+Shift+f
+Toggle full screen mode
 .It Ctrl+Shift+x
 Save current configuration
 .
