add fink package build
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@57 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,8 @@ Jimmy Zhou <jimmyzhou@users.sourceforge.net>
 	* Enhancements:
 		1. Enable multiple bold fonts. Thanks to Edgar Toernig for
 		   the patch.
+		2. Add Fink package build. Thanks to Jeremy Anthony for the
+		   submission.
 
 Gautam Iyer <gi1242@users.sourceforge.net>
 	* Bug Fixes:
