add release news of 0.5.1
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@58 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,13 @@
 -----------------
+06-22-2005
+
+Mrxvt version 0.5.1 is released! This release adds a new feature
+of profile support, and makes lots of improvement to the new macro
+feature. It also fixes lots of bugs. For details, check ChangeLog.
+:-)
+
+
+-----------------
 04-09-2005
 
 Mrxvt version 0.5.0 is released! After active development by our
