make tab activation on mouse button4/5 same as firefox
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@64 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 Jimmy Zhou <jimmyzhou@users.sourceforge.net>
 	* Bug Fixes:
 		1. Fix mrxvtset.pl as pointed by Avi Yagodnick.
+		2. Fix mouse button 4/5 behavior. Make it the same as firefox
+		   as pointed out by Yoshihiko Kashio.
 
 	* Enhancements:
 		1. Add --with-max-profiles to configure script as suggested
