--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 0.5.1 to 0.5.2
 \-----------------------------------
+Gautam Iyer <gi1242@users.sourceforge.net>
+	* Bug Fixes:
+		1. Fixed detecting xft support if xft-config is missing.
+		2. Fixed segfault obtained when the last macro in r->macros is executed
+
 Jimmy Zhou <jimmyzhou@users.sourceforge.net>
 	* Bug Fixes:
 		1. Fix mrxvtset.pl as pointed by Avi Yagodnick.
