add macros to check and set NULL pointers for better code readability
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@76 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@ Jimmy Zhou <jimmyzhou@users.sourceforge.net>
 		5. Fix off-focus fading. Thanks to Ken Zalewski for the report.
 		6. Add macros to check and set options.
 		7. Add macros to check and unset X resources.
+		8. Add macros to check and set NULL pointers.
 
 	* Enhancements:
 		1. Add --with-max-profiles to configure script as suggested
